--- a/kitchen.yml
+++ b/kitchen.yml
@@ -13,16 +13,8 @@ verifier:
   name: inspec
 
 platforms:
-  - name: amazonlinux-2
-    driver_config:
-      box: ywatase/amzn2
-  - name: ubuntu-16.04
   - name: ubuntu-18.04
-  - name: ubuntu-20.04
-  - name: centos-7
-  - name: centos-8
-  - name: debian-9
-  - name: debian-10
+  - name: centos-7.7
   - name: windows-2012r2
     driver:
       box: mwrock/Windows2012R2
@@ -41,6 +33,12 @@ suites:
     attributes:
       consul:
         config: &default-config
+          ports:
+           dns: 53
+           http: 8500
+           serf_lan: 8301
+           serf_wan: 8302
+           server: 8300
           owner: root
           ui: true
           bootstrap: true
