--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -12,12 +12,8 @@ verifier:
   name: inspec
 
 platforms:
-  - name: ubuntu-16.04
-  - name: ubuntu-14.04
-  - name: centos-7.3
-  - name: centos-6.8
-  - name: debian-9.3
-  - name: debian-8.7
+  - name: ubuntu-18.04
+  - name: centos-7.7
   - name: windows-2012r2
     driver:
       box: mwrock/Windows2012R2
@@ -32,6 +28,12 @@ suites:
     attributes:
       consul:
         config: &default-config
+          ports:
+           dns: 53
+           http: 8500
+           serf_lan: 8301
+           serf_wan: 8302
+           server: 8300
           owner: root
           ui: true
           bootstrap: true
