--- a/kitchen.dokken.yml
+++ b/kitchen.dokken.yml
@@ -3,21 +3,18 @@ driver:
   name: dokken
   privileged: true
   env: [CHEF_LICENSE=accept]
+  chef_version: '13.12.14'
 
 transport:
   name: dokken
 
 provisioner:
   name: dokken
-  product_name: chef
-  product_version: <%= ENV['CHEF_VERSION'] || 'latest' %>
-  install_strategy: once
 
 platforms:
   - name: centos-7
     driver:
       image: dokken/centos-7
-      platform: rhel
       pid_one_command: /usr/lib/systemd/systemd
     attributes:
       poise-service:
@@ -27,7 +24,6 @@ platforms:
   - name: centos-6
     driver:
       image: dokken/centos-6
-      platform: rhel
       pid_one_command: /sbin/init
       intermediate_instructions:
         - RUN yum -y install which initscripts net-tools
@@ -45,7 +41,7 @@ platforms:
     attributes:
       poise-service:
         consul:
-          provider: upstart
+          provider: systemd
 
   - name: ubuntu-18.04
     driver:
@@ -64,7 +60,6 @@ platforms:
       pid_one_command: /bin/systemd
       intermediate_instructions:
         - RUN /usr/bin/apt-get update
-        - RUN /usr/bin/apt-get install lsb-release net-tools -y
     attributes:
       poise-service:
         consul:
