Update deps and chef
Update Chef minimum version.
* Eliminates the need for the windows cookbook.
* Update Linux testing versions.
* Set minimum Chef version to 13.4.
* Update dokken testing to Chef 14.

Signed-off-by: Ben Kochie <superq@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,8 +41,9 @@ jobs:
       matrix:
         os:
           - 'centos-7'
-          - 'debian-8'
+          - 'centos-8'
           - 'debian-9'
+          - 'debian-10'
           - 'ubuntu-1604'
           - 'ubuntu-1804'
           - 'amazonlinux-2'
