Update kitchen.yml to our standards and default to current channel
- Add testing for Ubuntu 20.04
- Fix Dokken configuration for CentOS 8 and Ubuntu 16.04
- Enable enforce_idempotency checks

Signed-off-by: Lance Albertson <lance@osuosl.org>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,7 @@ jobs:
           - 'debian-10'
           - 'ubuntu-1604'
           - 'ubuntu-1804'
+          - 'ubuntu-2004'
           - 'amazonlinux-2'
         suite:
           - 'client'
