--- a/kitchen.dokken.yml
+++ b/kitchen.dokken.yml
@@ -2,8 +2,8 @@
 driver:
   name: dokken
   privileged: true
+  chef_version: <%= ENV['CHEF_VERSION'] || 'current' %>
   env: [CHEF_LICENSE=accept]
-  chef_version: 14
 
 transport:
   name: dokken
@@ -24,18 +24,16 @@ platforms:
   - name: centos-8
     driver:
       image: dokken/centos-8
-      pid_one_command: /sbin/init
-      intermediate_instructions:
-        - RUN yum -y install which initscripts net-tools
+      pid_one_command: /usr/lib/systemd/systemd
     attributes:
       poise-service:
         consul:
-          provider: upstart
+          provider: systemd
 
   - name: ubuntu-16.04
     driver:
       image: dokken/ubuntu-16.04
-      pid_one_command: /sbin/init
+      pid_one_command: /bin/systemd
       intermediate_instructions:
         - RUN /usr/bin/apt-get update
     attributes:
@@ -46,6 +44,17 @@ platforms:
   - name: ubuntu-18.04
     driver:
       image: dokken/ubuntu-18.04
+      pid_one_command: /bin/systemd
+      intermediate_instructions:
+        - RUN /usr/bin/apt-get update
+    attributes:
+      poise-service:
+        consul:
+          provider: systemd
+
+  - name: ubuntu-20.04
+    driver:
+      image: dokken/ubuntu-20.04
       pid_one_command: /bin/systemd
       intermediate_instructions:
         - RUN /usr/bin/apt-get update
