--- a/kitchen.dokken.yml
+++ b/kitchen.dokken.yml
@@ -2,7 +2,7 @@
 driver:
   name: dokken
   privileged: true
-  chef_version: <%= ENV['CHEF_VERSION'] || '16' %> # >= 17.0 does not support Poise
+  chef_version: <%= ENV['CHEF_VERSION'] || '17' %>
   env: [CHEF_LICENSE=accept]
 
 transport:
@@ -16,19 +16,11 @@ platforms:
     driver:
       image: dokken/centos-7
       pid_one_command: /usr/lib/systemd/systemd
-    attributes:
-      poise-service:
-        consul:
-          provider: systemd
 
   - name: centos-8
     driver:
       image: dokken/centos-8
       pid_one_command: /usr/lib/systemd/systemd
-    attributes:
-      poise-service:
-        consul:
-          provider: systemd
 
   - name: ubuntu-16.04
     driver:
@@ -36,10 +28,6 @@ platforms:
       pid_one_command: /bin/systemd
       intermediate_instructions:
         - RUN /usr/bin/apt-get update
-    attributes:
-      poise-service:
-        consul:
-          provider: systemd
 
   - name: ubuntu-18.04
     driver:
@@ -47,10 +35,6 @@ platforms:
       pid_one_command: /bin/systemd
       intermediate_instructions:
         - RUN /usr/bin/apt-get update
-    attributes:
-      poise-service:
-        consul:
-          provider: systemd
 
   - name: ubuntu-20.04
     driver:
@@ -58,10 +42,6 @@ platforms:
       pid_one_command: /bin/systemd
       intermediate_instructions:
         - RUN /usr/bin/apt-get update
-    attributes:
-      poise-service:
-        consul:
-          provider: systemd
 
   - name: debian-9
     driver:
@@ -69,10 +49,6 @@ platforms:
       pid_one_command: /bin/systemd
       intermediate_instructions:
         - RUN /usr/bin/apt-get update
-    attributes:
-      poise-service:
-        consul:
-          provider: systemd
 
   - name: debian-10
     driver:
@@ -80,16 +56,8 @@ platforms:
       pid_one_command: /bin/systemd
       intermediate_instructions:
         - RUN /usr/bin/apt-get update
-    attributes:
-      poise-service:
-        consul:
-          provider: systemd
 
   - name: amazonlinux-2
     driver:
       image: dokken/amazonlinux-2
       pid_one_command: /usr/lib/systemd/systemd
-    attributes:
-      poise-service:
-        consul:
-          provider: systemd
