--- a/kitchen.yml
+++ b/kitchen.yml
@@ -50,24 +50,14 @@ suites:
           acl_master_token: doublesecret
           acl_datacenter: FortMeade
           acl_default_policy: deny
-        service_nofile: 9001
+        service:
+          systemd_params:
+            LimitNOFILE: 9001
     excludes:
       - windows-2012r2
       - windows-2016
 
   - name: client
-    excludes:
-      - windows-2012r2
-      - windows-2016
-
-  - name: git
-    attributes:
-      go:
-        version: '1.10'
-      consul:
-        config: *default-config
-        installation:
-          provider: git
     excludes:
       - windows-2012r2
       - windows-2016
