--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,12 +4,11 @@ name: ci
 "on":
   pull_request:
   push:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   lint-unit:
-    uses: sous-chefs/.github/.github/workflows/lint-unit.yml@0.0.3
+    uses: sous-chefs/.github/.github/workflows/lint-unit.yml@2.0.1
     permissions:
       actions: write
       checks: write
@@ -35,7 +34,6 @@ jobs:
         suite:
           - "client"
           - "default"
-          # - 'git'
       fail-fast: false
 
     steps:
